@@ -16,6 +16,9 @@
   CR: Template API: Separation when loading data and statics for the preview
       There is still one properties file used for both.
       But now there are two separate methods to get the data and statics.
+  CR: Template API: Added method Meta customizeMeta(Meta meta)  
+      Preparation/customization of the meta object before rendering.  
+      The rendering is done in three steps (content, header, footer) and so this can be done once for all steps.
   CR: Template Preview Properties: Omission of the prefix 'static'
       Data and static use the same data/properties.
       Data uses this as a structured map, statics as a flat map.  
